tests/fixtures/valid/operator_unary_not.torel
unit fixtures.operator_unary_not;

export proc main() -> Bool {
    !false
}
