tests/fixtures/invalid/final_expr_type_mismatch.torel
unit fixtures.final_expr_type_mismatch;

export proc main() -> Exit {
    42
}
